--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,6 +43,8 @@ noinst_HEADERS =                     \
 	utils/ucc_datastruct.h           \
 	utils/ucc_math.h                 \
 	utils/ucc_coll_utils.h           \
+	utils/ucc_list.h				 \
+	utils/ucc_queue.h				 \
 	components/base/ucc_base_iface.h \
 	components/cl/ucc_cl.h           \
 	components/cl/ucc_cl_log.h       \
