--- a/tools/perf/Makefile.am
+++ b/tools/perf/Makefile.am
@@ -19,6 +19,6 @@ ucc_perftest_SOURCES =      \
 
 CXX=$(MPICXX)
 LD=$(MPICXX)
-ucc_perftest_CPPFLAGS=-I${UCC_TOP_BUILDDIR}/src
-ucc_perftest_CXXFLAGS=-std=gnu++11
+ucc_perftest_CPPFLAGS=$(BASE_CPPFLAGS)
+ucc_perftest_CXXFLAGS=-std=gnu++11 $(BASE_CXXFLAGS)
 ucc_perftest_LDADD = $(UCC_TOP_BUILDDIR)/src/libucc.la
