--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,8 +22,8 @@ SUBDIRS = . $(cl_dirs) $(tl_dirs) $(mc_dirs)
 lib_LTLIBRARIES  = libucc.la
 noinst_LIBRARIES =
 
-libucc_la_CPPFLAGS = $(AM_CPPFLAGS)
-libucc_la_CFLAGS   = -c
+libucc_la_CPPFLAGS = $(AM_CPPFLAGS) $(BASE_CPPFLAGS)
+libucc_la_CFLAGS   = -c $(BASE_CFLAGS)
 libucc_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed
 
 nobase_dist_libucc_la_HEADERS =	\
