--- a/src/components/cl/basic/Makefile.am
+++ b/src/components/cl/basic/Makefile.am
@@ -12,7 +12,8 @@ sources =              \
 
 module_LTLIBRARIES          = libucc_cl_basic.la
 libucc_cl_basic_la_SOURCES  = $(sources)
-libucc_cl_basic_la_CPPFLAGS = $(AM_CPPFLAGS)
+libucc_cl_basic_la_CPPFLAGS = $(AM_CPPFLAGS) $(BASE_CPPFLAGS)
+libucc_cl_basic_la_CFLAGS   = $(BASE_CFLAGS)
 libucc_cl_basic_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed
 libucc_cl_basic_la_LIBADD   = $(UCC_TOP_BUILDDIR)/src/libucc.la
 
