CORE: remove ucc_tl_type_t
    Now TLs are black boxes discovered in runtime and accessed via
    component->name. CLs define the required TLs via
    ucc_config_names_array (registered with parser) instead of
    tl_type_t bits.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,6 +88,7 @@ libucc_la_SOURCES =                  \
 	utils/ucc_proc_info.c            \
 	utils/ucc_string.c               \
 	utils/ucc_coll_utils.c           \
+	utils/ucc_parser.c               \
 	components/base/ucc_base_iface.c \
 	components/cl/ucc_cl.c           \
 	components/tl/ucc_tl.c           \
