API: new datatype definition

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ noinst_HEADERS =                      \
 	core/ucc_ee.h                     \
 	core/ucc_progress_queue.h         \
 	core/ucc_service_coll.h           \
+	core/ucc_dt.h	                  \
 	schedule/ucc_schedule.h           \
 	schedule/ucc_schedule_pipelined.h \
 	coll_score/ucc_coll_score.h       \
@@ -95,6 +96,7 @@ libucc_la_SOURCES =                   \
 	core/ucc_progress_queue_st.c      \
 	core/ucc_progress_queue_mt.c      \
 	core/ucc_service_coll.c           \
+	core/ucc_dt.c                     \
 	schedule/ucc_schedule.c           \
 	schedule/ucc_schedule_pipelined.c \
 	coll_score/ucc_coll_score.c       \
