--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
 
+# TLs generated Makefile
+config/m4/tls_list.m4
+src/components/tl/makefile.am
+
 # TL plugins generated Makefile
 config/m4/tl_coll_plugins_list.m4
 src/components/tl/ucp/makefile.coll_plugins.am
