--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -82,6 +82,7 @@ gtest_SOURCES =                     \
 	core/test_allgatherv.cc         \
 	core/test_bcast.cc              \
 	core/test_reduce.cc             \
+	core/test_reduce_scatter.cc     \
 	core/test_allreduce.cc          \
 	core/test_schedule.cc           \
 	core/test_topo.cc               \
