--- a/.ci/Dockerfile.centos8
+++ b/.ci/Dockerfile.centos8
@@ -1,6 +1,9 @@
 ARG CUDA_VER='11.4.2'
 FROM harbor.mellanox.com/torch-ucc/ucc/1.0.0/x86_64/centos8/cuda${CUDA_VER}:base
 
+RUN rm -rf  ${SRC_DIR}/ucc
+COPY . ${SRC_DIR}/ucc
+
 #==============================================================================
 # Build UCC
 RUN ${SRC_DIR}/ucc/.ci/scripts/build_ucc.sh
