--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,12 @@ m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
 
-# Generated Makefile 
-# (meta build system like autotools, 
+# TL plugins generated Makefile
+config/m4/tl_coll_plugins_list.m4
+src/components/tl/ucp/makefile.coll_plugins.am
+
+# Generated Makefile
+# (meta build system like autotools,
 # can automatically generate from config.status script
 # (which is called by configure script))
 Makefile
