--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@
 # $HEADER$
 
 define([ucc_ver_major], 1)
-define([ucc_ver_minor], 0)
+define([ucc_ver_minor], 1)
 define([ucc_ver_patch], 0)
 define([ucc_ver_micro], esyscmd([sh -c "git rev-list HEAD | wc -l | sed -e 's/ *//g' | xargs -n1 printf"]))
 define([ucc_git_sha], esyscmd([sh -c "git rev-parse --short HEAD"]))
@@ -53,9 +53,9 @@ RPM_RELEASE=1
 MAJOR_VERSION=ucc_ver_major
 MINOR_VERSION=ucc_ver_minor
 MICRO_VERSION=ucc_ver_micro
-PATCH_VERSION=ucc_ver_micro
+PATCH_VERSION=ucc_ver_patch
 UCC_GIT_SHA=ucc_git_sha
-VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
+VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION
 SOVERSION=libucc_so_version
 AC_SUBST(MAJOR_VERSION)
 AC_SUBST(MINOR_VERSION)
