CL/HIER: 2lvl alltoallv

--- a/src/components/cl/hier/Makefile.am
+++ b/src/components/cl/hier/Makefile.am
@@ -1,10 +1,14 @@
 #
-# Copyright (C) Mellanox Technologies Ltd. 2020-2021.  ALL RIGHTS RESERVED.
+# Copyright (C) Mellanox Technologies Ltd. 2020-2022.  ALL RIGHTS RESERVED.
 #
 
 allreduce =                   \
 	allreduce/allreduce.h     \
 	allreduce/allreduce_rab.c
+
+alltoallv =                   \
+	alltoallv/alltoallv.h     \
+	alltoallv/alltoallv.c
 
 sources =             \
 	cl_hier.h         \
@@ -14,7 +18,8 @@ sources =             \
 	cl_hier_team.c    \
 	cl_hier_coll.c    \
 	cl_hier_coll.h    \
-	$(allreduce)
+	$(allreduce)      \
+	$(alltoallv)
 
 module_LTLIBRARIES         = libucc_cl_hier.la
 libucc_cl_hier_la_SOURCES  = $(sources)
