--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,12 +6,14 @@ cl_dirs = components/cl/basic \
 		  components/cl/hier
 
 mc_dirs = components/mc/cpu
+ec_dirs =
 
 if HAVE_CUDA
 mc_dirs += components/mc/cuda
+ec_dirs += components/ec/cuda
 endif
 
-SUBDIRS = . $(cl_dirs) $(mc_dirs)
+SUBDIRS = . $(cl_dirs) $(mc_dirs) $(ec_dirs)
 
 include components/tl/makefile.am
 
@@ -33,6 +35,7 @@ noinst_HEADERS =                      \
 	core/ucc_lib.h                    \
 	core/ucc_context.h                \
 	core/ucc_mc.h                     \
+	core/ucc_ec.h                     \
 	core/ucc_team.h                   \
 	core/ucc_ee.h                     \
 	core/ucc_progress_queue.h         \
@@ -73,6 +76,8 @@ noinst_HEADERS =                      \
 	components/tl/ucc_tl_log.h        \
 	components/mc/base/ucc_mc_base.h  \
 	components/mc/ucc_mc_log.h        \
+	components/ec/base/ucc_ec_base.h  \
+	components/ec/ucc_ec_log.h        \
 	coll_patterns/recursive_knomial.h \
 	coll_patterns/sra_knomial.h       \
 	components/topo/ucc_topo.h        \
@@ -85,6 +90,7 @@ libucc_la_SOURCES =                   \
 	core/ucc_version.c                \
 	core/ucc_context.c                \
 	core/ucc_mc.c                     \
+	core/ucc_ec.c                     \
 	core/ucc_team.c                   \
 	core/ucc_ee.c                     \
 	core/ucc_coll.c                   \
@@ -111,6 +117,7 @@ libucc_la_SOURCES =                   \
 	components/cl/ucc_cl.c            \
 	components/tl/ucc_tl.c            \
 	components/mc/base/ucc_mc_base.c  \
+	components/ec/base/ucc_ec_base.c  \
 	components/topo/ucc_topo.c        \
 	components/topo/ucc_sbgp.c
 
