--- a/src/components/ec/cuda/kernel/Makefile.am
+++ b/src/components/ec/cuda/kernel/Makefile.am
@@ -12,11 +12,9 @@ LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 .cu.lo:
 	/bin/bash $(top_srcdir)/cuda_lt.sh "$(LIBTOOL)" $@ $(NVCC) -c  $< $(NVCCFLAGS) $(NVCC_ARCH)
 
-comp_noinst = libucc_mc_cuda_kernels.la
+comp_noinst = libucc_ec_cuda_kernels.la
 
-libucc_mc_cuda_kernels_la_SOURCES  = mc_cuda_reduce.cu              \
-                                     mc_cuda_reduce_multi.cu        \
-                                     mc_cuda_reduce_multi_alpha.cu
-libucc_mc_cuda_kernels_la_CPPFLAGS =
+libucc_ec_cuda_kernels_la_SOURCES  = ec_cuda_wait_kernel.cu
+libucc_ec_cuda_kernels_la_CPPFLAGS =
 
 noinst_LTLIBRARIES = $(comp_noinst)
