TEST: reduce_scatter in gtest

--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -83,6 +83,7 @@ gtest_SOURCES =                     \
 	core/test_bcast.cc              \
 	core/test_reduce.cc             \
 	core/test_allreduce.cc          \
+	core/test_reduce_scatter.cc     \
 	core/test_schedule.cc           \
 	core/test_topo.cc               \
 	core/test_service_coll.cc       \
