CL/HIER: allreduce split rail

--- a/src/components/cl/hier/Makefile.am
+++ b/src/components/cl/hier/Makefile.am
@@ -2,9 +2,11 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020-2022.  ALL RIGHTS RESERVED.
 #
 
-allreduce =                   \
-	allreduce/allreduce.h     \
-	allreduce/allreduce_rab.c
+allreduce =                          \
+	allreduce/allreduce.h            \
+	allreduce/allreduce.c            \
+	allreduce/allreduce_rab.c        \
+	allreduce/allreduce_split_rail.c
 
 alltoallv =                   \
 	alltoallv/alltoallv.h     \
